// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > should render component 1`] = `
HTMLCollection [
  <a
    class="-mx-0.5 border-b-4 border-yellow bg-gradient-to-b from-transparent from-50% to-yellow to-50% bg-[length:100%_200%] px-0.5 font-medium transition-all duration-500 hover:border-b-2 hover:bg-[0_100%]"
    href="/login"
  >
    <span>
      Login
    </span>
    <!---->
  </a>,
]
`;

exports[`Link > should render with external 1`] = `
HTMLCollection [
  <a
    class="-mx-0.5 border-b-4 border-yellow bg-gradient-to-b from-transparent from-50% to-yellow to-50% bg-[length:100%_200%] px-0.5 font-medium transition-all duration-500 hover:border-b-2 hover:bg-[0_100%]"
    href="https://acme.inc"
    target="_blank"
  >
    <span>
      Login
    </span>
    <!---->
  </a>,
]
`;
